--- a/index.html
+++ b/index.html
@@ -113,12 +113,10 @@
    <h2 style="color: rgb(239, 240, 241);">المنتج الاول</h2>
          <p style="color: azure;">شرحة</p>
   </div>
-  <div class="video" id="video">
+  <div class="video">
     <video controls width="800">
       <source src="m99.mp4" type="video/mp4" />
       Download the
-      <a href=".webm">WEBM</a>
-      or
       <a href="m99.mp4">MP4</a>
       video.
     </video>
