--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
   <div class="video">
     <video controls width="800">
       <source src="m99.mp4" type="video/mp4" />
-      Download the
-      <a href="m99.mp4">MP4</a>
-      video.
+       <a href="m99.mp4" download="m99.mp4">link to the video</a> 
     </video>
   </div>
   
