--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     
  </div>
 </div>
-
+<div class="feature">
 <div class="feature"> <kbd class="fa-solid fa-fire"></kbd>
          
   <div class="contetn">
